2003-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_feature.c (CropImageToHBITMAP): Remove useless
	autocrop support which was transferred from CropImage when
	creating CropImageToHBITMAP.

2003-02-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): RLE packet size was not
	calculated correctly, causing RLE-compressed MIFF images with
	depth>8 to not be read.

2003-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/paint.c (ColorFloodfillImage): Transfered fix from
	ImageMagick for the problem that floodfill using a tiled image
	failed if the target color happened to match the current fill
	color.

2003-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Fixed preview error message.
	* coders/preview.c: Previous update had broken noiseimage demo.
	Also some cleanups.
	* magick/display.c (XMagickCommand): No longer uses
	MogrifyImage.
	* coders/preview.c (WritePreviewImage): Re-wrote so that
	MogrifyImage is no longer used. Resize image outside of the loop
	to improve performance.

2003-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ShadeImage): Use PixelIntensityToDouble macro.
	* magick/image.h (PixelIntensityToDouble): Added
	PixelIntensityToDouble macro to handle the case where pixel
	intensity is used for floating arithmetic.

2003-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Distribute files ChangeLog, INSTALL-mac.txt,
	INSTALL-unix.txt, INSTALL-vms.txt INSTALL-windows.txt, and NEWS.

2003-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (SVGStartElement): Applied fix from ImageMagick to
	compute SVG +> MVG viewbox correctly.
	* magick/image.c (CloneImage): Applied fix from ImageMagick which
	is purported to solve the problem that "negative (x,y) page offsets
	did not clone properly".
	* magick/gem.c (TransformHWB): Replace implementation with