@@ -1,3 +1,8 @@
+2002-02-07  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+
+	* index.html: Update to distinguish between ImageMagick and
+	GraphicsMagick, and to explain "gm" prefix of commandline utilities.
+
 2003-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/nt_feature.c (CropImageToHBITMAP): Remove useless
